--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "mocha-webpack --webpack-config webpack.config.js --require test/setup.js test/*.spec.js"
   },
   "dependencies": {
+    "expect": "^22.4.3",
     "express": "^4.16.3",
+    "jsdom": "^11.7.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^5.0.5",
+    "mocha-webpack": "^1.1.0",
     "vue": "^2.5.13",
-    "vue-server-renderer": "^2.5.13"
+    "vue-loader": "^14.2.2",
+    "vue-server-renderer": "^2.5.13",
+    "vue-test-utils": "^1.0.0-beta.11",
+    "webpack": "^4.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.3",
