--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsdom-global": "^3.0.2",
     "mocha": "^5.0.5",
     "mocha-webpack": "^1.1.0",
+    "nodemon": "^1.17.3",
     "vue": "^2.5.13",
     "vue-loader": "^14.2.2",
     "vue-server-renderer": "^2.5.13",
