--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "expect": "^22.4.3",
     "express": "^4.16.3",
     "jsdom": "^11.7.0",
