add sass-loader node-sass

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jsdom-global": "^3.0.2",
     "mocha": "^5.0.5",
     "mocha-webpack": "^1.1.0",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.17.3",
+    "sass-loader": "^7.0.2",
     "vue": "^2.5.16",
     "vue-loader": "^14.2.2",
     "vue-server-renderer": "^2.5.16",
