--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha-webpack": "^1.1.0",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.3",
+    "normalize.css": "^8.0.0",
     "sass-loader": "^7.0.2",
     "vue": "^2.5.16",
     "vue-loader": "^14.2.2",
