--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "jsdom": "^11.7.0",
     "jsdom-global": "^3.0.2",
+    "milligram": "^1.3.0",
     "mocha": "^5.0.5",
     "mocha-webpack": "^1.1.0",
     "node-sass": "^4.9.0",
