--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "mocha-webpack --webpack-config webpack.config.js --require test/setup.js test/*.spec.js"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "expect": "^22.4.3",
     "express": "^4.16.3",
+    "hover": "^3.0.0-alpha.6",
     "jsdom": "^11.7.0",
     "jsdom-global": "^3.0.2",
     "milligram": "^1.3.0",
