--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "css-loader": "^0.28.11",
     "expect": "^22.4.3",
     "express": "^4.16.3",
     "hover": "^3.0.0-alpha.6",
@@ -32,9 +33,9 @@
     "webpack": "^4.5.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.6",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.6",
-    "@vue/cli-service": "^3.0.0-beta.6",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.1",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.1",
+    "@vue/cli-service": "^3.0.0-rc.1",
     "tailwindcss": "^0.5.2",
     "vue-template-compiler": "^2.5.16"
   },
@@ -45,10 +46,17 @@
   },
   "eslintConfig": {
     "root": true,
+    "env": {
+      "node": true
+    },
     "extends": [
       "plugin:vue/essential",
       "eslint:recommended"
-    ]
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
   },
   "postcss": {
     "plugins": {
