--- a/package.json
+++ b/package.json
@@ -3,46 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --open",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-dev": "vue-cli-service build --mode development",
-    "lint": "vue-cli-service lint",
-    "test": "mocha-webpack --webpack-config webpack.config.js --require test/setup.js test/*.spec.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "animate.css": "^3.6.1",
     "axios": "^0.18.0",
-    "cors": "^2.8.4",
-    "css-loader": "^0.28.11",
-    "expect": "^22.4.3",
-    "express": "^4.16.3",
-    "hover": "^3.0.0-alpha.6",
-    "jsdom": "^11.7.0",
-    "jsdom-global": "^3.0.2",
-    "milligram": "^1.3.0",
-    "mocha": "^5.0.5",
-    "mocha-webpack": "^1.1.0",
     "node-sass": "^4.9.0",
-    "nodemon": "^1.17.3",
-    "normalize.css": "^8.0.0",
-    "sass-loader": "^7.0.2",
-    "vue": "^2.5.16",
-    "vue-loader": "^14.2.2",
-    "vue-server-renderer": "^2.5.16",
-    "vue-test-utils": "^1.0.0-beta.11",
-    "webpack": "^4.5.0"
+    "sass-loader": "^7.0.3",
+    "vue": "^2.5.16"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.1",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.1",
-    "@vue/cli-service": "^3.0.0-rc.1",
-    "tailwindcss": "^0.5.2",
+    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
+    "@vue/cli-service": "^3.0.0-beta.15",
     "vue-template-compiler": "^2.5.16"
-  },
-  "babel": {
-    "presets": [
-      "@vue/app"
-    ]
   },
   "eslintConfig": {
     "root": true,
