--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "axios": "^0.18.0",
+    "milligram": "^1.3.0",
     "node-sass": "^4.9.0",
+    "normalize.css": "^8.0.0",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.16"
   },
