--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
     "sass-loader": "^7.0.3",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
