--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "engines": {
+    "node": "9.11.1",
+    "npm": "5.6.0"
+  },
   "dependencies": {
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
