--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "animate.css": "^3.6.1",
     "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "milligram": "^1.3.0",
     "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
