--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
   },
   "dependencies": {
     "animate.css": "^3.6.1",
+    "autoprefixer": "^8.6.4",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "chalk": "^2.4.1",
+    "connect-history-api-fallback": "^1.5.0",
+    "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^0.28.11",
+    "cssnano": "^3.10.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
     "milligram": "^1.3.0",
     "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
     "sass-loader": "^7.0.3",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "webpack-bundle-analyzer": "^2.13.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
