--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,21 +1,50 @@
 {
-    "short_name": "WCHC",
-    "name": "WHATCoin WHICHCoin",
-    "icons": [
-      {
-        "src": "/images/icons-192.png",
-        "type": "image/png",
-        "sizes": "192x192"
-      },
-      {
-        "src": "/images/icons-512.png",
-        "type": "image/png",
-        "sizes": "512x512"
-      }
-    ],
-    "start_url": "/?source=pwa",
-    "background_color": "#ffed65",
-    "display": "standalone",
-    "scope": "/",
-    "theme_color": "#ffed65"
-  }
+  "name": "WHATCoin WHICHCoin",
+  "short_name": "WCWC",
+  "icons": [
+    {
+      "src": "./images/app-icon-48x48.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "/images/app-icon-96x96.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "/images/app-icon-144x144.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "/images/app-icon-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/images/app-icon-256x256.png",
+      "type": "image/png",
+      "sizes": "256x256"
+    },
+    {
+      "src": "/images/app-icon-384x384.png",
+      "type": "image/png",
+      "sizes": "384x384"
+    },
+    {
+      "src": "/images/app-icon-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": "/index.html",
+  "scope": ".",
+  "display": "fullscreen",
+  "orientation": "portrait-primary",
+  "background_color": "#ffed65",
+  "theme_color": "#ffed65",
+  "description": "A simple Instagram Clone, implementing a lot of PWA love.",
+  "dir": "ltr",
+  "lang": "en-US"
+}
