--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "animate.css": "^3.6.1",
-    "autoprefixer": "^8.6.4",
+    "animate.css": "^3.7.0",
+    "autoprefixer": "^8.6.5",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "chalk": "^2.4.1",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.2",
@@ -27,21 +27,21 @@
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
     "milligram": "^1.3.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^7.1.0",
     "sw-precache-webpack-plugin": "^0.11.5",
-    "vue": "^2.5.16",
+    "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "webpack-bundle-analyzer": "^2.13.1",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "vue-template-compiler": "^2.5.16"
+    "@vue/cli-plugin-babel": "^3.0.4",
+    "@vue/cli-plugin-eslint": "^3.0.4",
+    "@vue/cli-service": "^3.0.4",
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
