--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "start": "npm run build",
+    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "animate.css": "^3.7.0",
