--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass-loader": "^7.1.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "vue": "^2.5.17",
+    "vue-analytics": "^5.16.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "webpack-bundle-analyzer": "^3.0.2",
