--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "WHATCoinWHICHCoin",
   "version": "0.0.1",
   "private": true,
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "start": "node server.js",
     "postinstall": "npm run build"
   },
   "dependencies": {
@@ -32,6 +31,7 @@
     "milligram": "^1.3.0",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
+    "register-service-worker": "^1.0.0",
     "sass-loader": "^7.1.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "vue": "^2.5.17",
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
+    "@vue/cli-plugin-pwa": "^3.0.5",
     "@vue/cli-service": "^3.0.4",
     "vue-template-compiler": "^2.5.17"
   },
@@ -71,6 +72,7 @@
     "last 2 versions",
     "not ie <= 8"
   ],
+  "main": "server.js",
   "engines": {
     "node": "10.11.0",
     "npm": "6.4.1"
