--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,37 +3,37 @@
   "short_name": "WCWC",
   "icons": [
     {
-      "src": "/assets/app-icon-48x48.png",
+      "src": "/assets/icons/Icon-48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
     {
-      "src": "/assets/app-icon-96x96.png",
+      "src": "/assets/icons/Icon-96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "/assets/app-icon-144x144.png",
+      "src": "/assets/icons/Icon-144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "/assets/app-icon-192x192.png",
+      "src": "/assets/icons/Icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/assets/app-icon-256x256.png",
+      "src": "/assets/icons/Icon-256.png",
       "type": "image/png",
       "sizes": "256x256"
     },
     {
-      "src": "/assets/app-icon-384x384.png",
+      "src": "/assets/icons/Icon-384.png",
       "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "/assets/app-icon-512x512.png",
+      "src": "/assets/icons/Icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
@@ -42,7 +42,7 @@
   "scope": ".",
   "display": "fullscreen",
   "orientation": "portrait-primary",
-  "background_color": "#ffed65",
+  "background_color": "#1B98E0",
   "theme_color": "#1B98E0",
   "description": "Crypto currency price dashboard",
   "dir": "ltr",
