--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   ],
   "main": "server.js",
   "engines": {
-    "node": "10.11.0",
+    "node": "^10.11.0",
     "npm": "6.4.1"
   },
   "license": "MIT"
