--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   "main": "server.js",
   "engines": {
     "node": "^10.11.0",
-    "npm": "6.4.1"
+    "npm": "^6.4.1"
   },
   "license": "MIT"
 }
