--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.4",
+    "dotenv": "^6.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -32,6 +33,7 @@
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "register-service-worker": "^1.0.0",
+    "rollbar": "^2.5.0",
     "sass-loader": "^7.1.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "vue": "^2.5.17",
