--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@nuxtjs/axios": "^5.4.1",
     "@nuxtjs/pwa": "^3.0.0-beta.13",
     "@nuxtjs/style-resources": "^0.1.2",
+    "animate.css": "^3.7.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vue-analytics": "^5.16.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
