--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "whatcoinwhichcoinv2",
+  "name": "whatcoinwhichcoin",
   "version": "1.0.0",
-  "description": "Cryptocurrency Price Dashboard for fun.",
+  "description": "Crypto currency price dashboard for fun.",
   "author": "Mannuel Ferreira",
   "private": true,
   "scripts": {
@@ -11,8 +11,9 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
-    "test": "jest"
+    "precommit": "npm run lint && npm run lintfix",
+    "test": "jest",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.4.1",
