--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
+    "rollbar": "^2.5.4",
     "sass-loader": "^7.1.0",
     "vue-analytics": "^5.16.4"
   },
