--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/sitemap": "^0.2.2",
     "@nuxtjs/style-resources": "^0.1.2",
     "animate.css": "^3.7.0",
+    "consola": "^2.6.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "node-sass": "^4.11.0",
