--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,37 +3,37 @@
   "short_name": "WCWC",
   "icons": [
     {
-      "src": "/assets/icons/Icon-48.png",
+      "src": "/assets/icons/android-icon-48x48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
     {
-      "src": "/assets/icons/Icon-96.png",
+      "src": "/assets/icons/android-icon-96x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "/assets/icons/Icon-144.png",
+      "src": "/assets/icons/android-icon-144x144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "/assets/icons/Icon-192.png",
+      "src": "/assets/icons/android-icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/assets/icons/Icon-256.png",
+      "src": "/assets/icons/android-icon-256x256.png",
       "type": "image/png",
       "sizes": "256x256"
     },
     {
-      "src": "/assets/icons/Icon-384.png",
+      "src": "/assets/icons/android-icon-384x384.png",
       "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "/assets/icons/Icon-512.png",
+      "src": "/assets/icons/android-icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
