--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "nuxt": "^2.4.0",
     "sass-loader": "^7.1.0",
     "vue-i18n": "^8.10.0",
-    "vue-native-websocket": "^2.0.13",
-    "vue-rollbar": "^1.0.0"
+    "vue-native-websocket": "^2.0.13"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
