--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/style-resources": "^0.1.2",
     "animate.css": "^3.7.0",
     "consola": "^2.6.0",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "node-sass": "^4.12.0",
