--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-native-websocket": "^2.0.13"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "^0.5.6",
     "@nuxtjs/eslint-config": "^0.0.1",
     "@vue/test-utils": "^1.0.0-beta.27",
     "autoprefixer": "^8.6.4",
