--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "private": true,
   "scripts": {
     "dev": "nuxt-ts",
-    "build": "nuxt build",
+    "build": "nuxt-ts build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt-ts generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint && npm run lintfix",
     "test": "jest"
   },
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.6",
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@nuxtjs/eslint-config-typescript": "^1.0.2",
     "@vue/test-utils": "^1.0.0-beta.27",
     "autoprefixer": "^8.6.4",
     "babel-core": "7.0.0-bridge.0",
