--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@nuxt/typescript-build": "^0.5.6",
     "@nuxtjs/eslint-config": "^0.0.1",
     "@nuxtjs/eslint-config-typescript": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "@vue/test-utils": "^1.0.0-beta.27",
     "autoprefixer": "^8.6.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^23.6.0",
-    "eslint": "^5.15.1",
+    "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-config-standard": ">=12.0.0",
     "eslint-loader": "^2.1.2",
