--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "author": "Mannuel Ferreira",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "dev": "nuxt-ts",
+    "build": "nuxt-ts build",
+    "start": "cross-env NODE_ENV=production node server/index.ts",
+    "generate": "nuxt-ts generate",
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint && npm run lintfix",
-    "test": "jest",
-    "heroku-postbuild": "npm run build"
+    "test": "jest"
   },
   "dependencies": {
+    "@nuxt/typescript-runtime": "^0.3.8",
     "@nuxtjs/axios": "^5.4.1",
     "@nuxtjs/pwa": "^3.0.0-beta.13",
     "@nuxtjs/sitemap": "^0.2.2",
@@ -34,12 +34,15 @@
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.6",
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@nuxtjs/eslint-config-typescript": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "@vue/test-utils": "^1.0.0-beta.27",
     "autoprefixer": "^8.6.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^23.6.0",
-    "eslint": "^5.15.1",
+    "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-config-standard": ">=12.0.0",
     "eslint-loader": "^2.1.2",
