--- a/package.json
+++ b/package.json
@@ -16,48 +16,49 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.3.8",
-    "@nuxtjs/axios": "^5.4.1",
-    "@nuxtjs/pwa": "^3.0.0-beta.13",
+    "@nuxtjs/axios": "^5.9.5",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/sitemap": "^0.2.2",
     "@nuxtjs/style-resources": "^0.1.2",
-    "animate.css": "^3.7.0",
-    "consola": "^2.6.0",
+    "animate.css": "^3.7.2",
+    "consola": "^2.11.3",
     "cors": "^2.8.5",
-    "cross-env": "^5.2.0",
-    "express": "^4.16.4",
-    "node-sass": "^4.12.0",
-    "nuxt": "^2.4.0",
-    "sass-loader": "^7.1.0",
-    "vue-i18n": "^8.10.0",
-    "vue-native-websocket": "^2.0.13"
+    "cross-env": "^5.2.1",
+    "express": "^4.17.1",
+    "node-sass": "^4.13.1",
+    "nuxt": "^2.11.0",
+    "nuxt-typed-vuex": "^0.1.16",
+    "sass-loader": "^7.3.1",
+    "vue-i18n": "^8.15.4",
+    "vue-native-websocket": "^2.0.14"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.5.6",
+    "@nuxt/typescript-build": "^0.5.8",
     "@nuxtjs/eslint-config": "^0.0.1",
     "@nuxtjs/eslint-config-typescript": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "@vue/test-utils": "^1.0.0-beta.31",
     "autoprefixer": "^8.6.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-config-standard": ">=12.0.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": ">=2.14.0",
-    "eslint-plugin-jest": ">=21.24.1",
-    "eslint-plugin-node": ">=7.0.1",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.0",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-promise": ">=4.0.1",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.2.3",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.9",
+    "nodemon": "^1.19.4",
     "prettier": "1.14.3",
-    "rollbar-sourcemap-webpack-plugin": "^2.5.0",
+    "rollbar-sourcemap-webpack-plugin": "^2.7.0",
     "tailwindcss": "^0.7.0",
-    "vue-jest": "^3.0.2"
+    "vue-jest": "^3.0.5"
   }
 }
