--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-sass": "^4.13.1",
     "nuxt": "^2.11.0",
     "nuxt-typed-vuex": "^0.1.16",
+    "regenerator-runtime": "^0.13.3",
     "sass-loader": "^7.3.1",
     "vue-i18n": "^8.15.4",
     "vue-native-websocket": "^2.0.14"
