--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/sitemap": "^0.2.2",
     "@nuxtjs/style-resources": "^0.1.2",
+    "@vue/composition-api": "^0.5.0",
     "animate.css": "^3.7.2",
     "consola": "^2.11.3",
     "cors": "^2.8.5",
@@ -27,7 +28,7 @@
     "express": "^4.17.1",
     "node-sass": "^4.13.1",
     "nuxt": "^2.11.0",
-    "nuxt-typed-vuex": "^0.1.16",
+    "nuxt-typed-vuex": "^0.1.17",
     "regenerator-runtime": "^0.13.3",
     "sass-loader": "^7.3.1",
     "vue-i18n": "^8.15.4",
