--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "nuxt-ts build",
     "start": "cross-env NODE_ENV=production node server/index.ts",
     "generate": "nuxt-ts generate",
-    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
-    "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint && npm run lintfix",
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .eslintignore .gitignore .",
+    "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .eslintignore .gitignore .",
+    "precommit": "yarn run lint && yarn run lintfix",
     "test": "jest"
   },
   "dependencies": {
@@ -38,6 +38,7 @@
     "@nuxt/typescript-build": "^0.5.8",
     "@nuxtjs/eslint-config": "^0.0.1",
     "@nuxtjs/eslint-config-typescript": "^1.0.2",
+    "@types/cors": "^2.8.6",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "@vue/test-utils": "^1.0.0-beta.31",
